# StudyFlow

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: shared.tsx
src/hooks/: useStudyFlowApp.test.tsx  useStudyFlowApp.ts
src/lib/: schedule.test.ts  schedule.ts
src/pages/: OverridesPage.tsx  SettingsPage.tsx  StatsPage.tsx  TodayPage.tsx  WeeklyPage.test.tsx  WeeklyPage.tsx
src/services/: platform.ts
